# invoice-processor

./: .env.example  .gitignore  .pre-commit-config.yaml  ANALYSIS_SUMMARY.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPLETION_CHECKLIST.md  CONTRIBUTING.md  IMPLEMENTATION_NOTES.md  IMPROVEMENT_PLAN.md  INSTALL.md  ISSUES_FOUND.md  README.md  TODO.md  invoice-api.service  mkdocs.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
docs/: api.md  getting-started.md  index.md
examples/: README.md  basic_usage.py  batch_processing.py
src/invoice_processor/: __init__.py  cli.py  config.py  models.py
src/invoice_processor/api/: __init__.py  main.py  routes.py
src/invoice_processor/core/: __init__.py  extractor.py  ocr.py  processor.py  validator.py
src/invoice_processor/db/: __init__.py
src/invoice_processor/integrations/: __init__.py
src/invoice_processor/mcp_server/: README.md  __init__.py  server.py
src/invoice_processor/utils/: __init__.py  logging_config.py  security.py
tests/: __init__.py  conftest.py
tests/unit/: test_extractor.py  test_models.py  test_ocr.py  test_processor.py  test_security.py  test_validator.py
